# ckanext-json-viewer

./: README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/json_viewer/: config.py  config_declaration.yml  helpers.py  plugin.py
ckanext/json_viewer/assets/css/: json_viewer.css
ckanext/json_viewer/logic/: schema.py
ckanext/json_viewer/templates/: json_form.html  json_view.html
